app/RESTfulAPI-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restfulapi-test
  annotations:
    argoproj.io/sync-wave: "0"
spec: {}
status: {}
