app/RESTfulAPI-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: restfulapi-cd
  name: restfulapi-cd
  namespace: restfulapi-cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restfulapi-cd
  template:
    metadata:
      labels:
        app: restfulapi-cd
    spec:
      containers:
      - image: docker.io/polpinol98/restfulapiapp:1.0.29
        name: restfulapi-cd
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
