app/RESTfulAPI-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: restfulapi-test
  name: restfulapi-test
  namespace: restfulapi-test
  annotations:
    argoproj.io/sync-wave: "1"
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: restfulapi-test
